cmake_minimum_required(VERSION 2.8)
set(APP_NAME	benchapp)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${BENCHAPP_CONFIG}")

message(STATUS "CONFIG " ${BENCHAPP_CONFIG})

include_directories(${APP_NAME} ${CMAKE_SOURCE_DIR}/external/WjCryptLib/lib)

set(SOURCE_FILES main.c ba_port.c)

IF (DEFINED CONFIG_BENCHMARK_MD5)
IF ("${CONFIG_BENCHMARK_MD5}" STREQUAL "y")
set(SOURCE_FILES ${SOURCE_FILES} ba_md5.c)
ENDIF ()
ENDIF(DEFINED CONFIG_BENCHMARK_MD5)

IF (DEFINED CONFIG_BENCHMARK_AES)
IF ("${CONFIG_BENCHMARK_AES}" STREQUAL "y")
set(SOURCE_FILES ${SOURCE_FILES} ba_aes.c)
ENDIF ()
ENDIF(DEFINED CONFIG_BENCHMARK_AES)

IF (DEFINED CONFIG_BENCHMARK_SHA)
IF ("${CONFIG_BENCHMARK_SHA}" STREQUAL "y")
set(SOURCE_FILES ${SOURCE_FILES} ba_sha.c)
ENDIF ()
ENDIF(DEFINED CONFIG_BENCHMARK_SHA)


add_executable(${APP_NAME} ${SOURCE_FILES})

target_link_libraries(${APP_NAME} ${CMAKE_SOURCE_DIR}/external/WjCryptLib/build/libWjCryptLib.a)

project(benchapp)

